UI Improvements and Instant Meetings

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
     <!-- The Agora SDK requires Bluetooth permissions in case users are using Bluetooth devices.-->
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <application
-        android:label="teams_app"
+        android:label="Dialogue"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
