--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,12 +16,13 @@ dependencies:
   font_awesome_flutter: ^9.1.0
   agora_rtc_engine: ^4.0.2
   permission_handler: ^8.1.2 
-  google_fonts: ^2.1.0 
   pin_code_fields: ^7.2.0
   firebase_core: ^1.3.0
   firebase_auth: ^2.0.0
   cloud_firestore: ^2.3.0
   modal_progress_hud_nsn: ^0.1.0-nullsafety-1
+  flutter_svg: ^0.22.0
+  animated_text_kit: ^4.2.1
 
 
 dev_dependencies:
@@ -31,5 +32,25 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
+    - images/dialogoapp.svg
     - images/dialogoapp.png
-    - images/logo.png  
+    - images/dialogo.png  
+
+  fonts:
+    - family: Mons
+      fonts:
+        - asset: fonts/Montserrat-Regular.ttf
+          weight: 400
+        - asset: fonts/Montserrat-Medium.ttf
+          weight: 500
+        - asset: fonts/Montserrat-SemiBold.ttf
+          weight: 600
+        - asset: fonts/Montserrat-Bold.ttf
+          weight: 700
+        - asset: fonts/Montserrat-Light.ttf
+          weight: 300
+        - asset: fonts/Montserrat-ExtraLight.ttf
+          weight: 200
+        - asset: fonts/Montserrat-Thin.ttf
+          weight: 100
+ 
