--- a/.gitignore
+++ b/.gitignore
@@ -50,6 +50,7 @@ android/app/google-services.json
 .pub/
 coverage/
 lib/generated_plugin_registrant.dart
+lib/app_id.dart
 # For library packages, don’t commit the pubspec.lock file.
 # Regenerating the pubspec.lock file lets you test your package against the latest compatible versions of its dependencies.
 # See https://dart.dev/guides/libraries/private-files#pubspeclock
